--- a/ch.openboard.OpenBoard.yml
+++ b/ch.openboard.OpenBoard.yml
@@ -59,29 +59,28 @@ modules:
     sources:
       - type: git
         url: https://github.com/openboard-org/openboard
-        tag: v1.5.2
-        commit: d932ae1a42d00ba27acf7cd87a7f914a49fc67f4
+        branch: dev
+#        tag: v1.5.2
+#        commit: d932ae1a42d00ba27acf7cd87a7f914a49fc67f4
       - type: shell
         commands:
           - lrelease OpenBoard.pro
           - mkdir QtWebKit -p
           - echo "#include <QtWebKit/QWebView>" > QtWebKit/QWebView
       - type: patch
-        path: patches/0001-Add-compatibility-with-OpenSSL-1.1.patch
+        path: patches/0001-Rewrite-libs.pri.patch
       - type: patch
-        path: patches/0002-Rewrite-libs.pri.patch
+        path: patches/0002-Use-libpoppler-instead-of-raw-xpdf.patch
       - type: patch
-        path: patches/0003-Use-libpoppler-instead-of-raw-xpdf.patch
+        path: patches/0003-Install-to-correct-directories-on-linux.patch
       - type: patch
-        path: patches/0004-Don-t-use-QtSingleApplication.patch
+        path: patches/0004-Update-library-names.patch
       - type: patch
-        path: patches/0005-Install-to-correct-directories-on-linux.patch
+        path: patches/0005-Use-QStandardPaths-to-locate-resources.patch
       - type: patch
-        path: patches/0006-Update-library-names.patch
+        path: patches/0006-Add-svg-icon.patch
       - type: patch
-        path: patches/0007-Use-QStandardPaths-to-locate-resources.patch
-      - type: patch
-        path: patches/0008-Add-svg-icon.patch
+        path: patches/0008-pro-Remove-UB_THIRDPARTY_INTERACTIVE.patch
       - type: file
         path: ch.openboard.OpenBoard.appdata.xml
 
