--- a/ch.openboard.OpenBoard.yml
+++ b/ch.openboard.OpenBoard.yml
@@ -33,6 +33,11 @@ modules:
     buildsystem: cmake-ninja
     config-opts:
       - -DENABLE_UNSTABLE_API_ABI_HEADERS=ON
+      - -DENABLE_CPP=ON
+      - -DENABLE_QT5=OFF
+      - -DENABLE_GLIB=OFF
+      - -DBUILD_GTK_TESTS=OFF
+      - -DENABLE_GTK_DOC=OFF
     sources:
       - type: archive
         url: https://poppler.freedesktop.org/poppler-0.74.0.tar.xz
