Revert mistakenly committed change

--- a/ch.openboard.OpenBoard.yml
+++ b/ch.openboard.OpenBoard.yml
@@ -10,7 +10,7 @@ finish-args:
   - --socket=wayland
   - --socket=pulseaudio
   - --device=dri
-  - --filesystem=xdg-desktop
+  - --filesystem=home
 separate-locales: false
 base: io.qt.qtwebkit.BaseApp
 base-version: '5.14'
