--- a/ch.openboard.OpenBoard.yml
+++ b/ch.openboard.OpenBoard.yml
@@ -1,6 +1,6 @@
 id: ch.openboard.OpenBoard
 runtime: org.kde.Platform
-runtime-version: 5.15-23.08
+runtime-version: "6.6"
 sdk: org.kde.Sdk
 command: openboard
 finish-args:
@@ -13,7 +13,7 @@ finish-args:
   - --filesystem=home
 separate-locales: false
 base: io.qt.qtwebengine.BaseApp
-base-version: 5.15-23.08
+base-version: "6.6"
 cleanup:
   - /include
   - /lib/pkgconfig
@@ -155,7 +155,7 @@ modules:
       - install -Dm644 -t ${FLATPAK_DEST}/share/appdata ${FLATPAK_ID}.appdata.xml
     build-options:
       env:
-        QMAKEPATH: /app/lib
+        QMAKEPATH: /app/
     sources:
       - type: archive
         url: https://github.com/OpenBoard-org/OpenBoard/archive/refs/tags/v1.7.0.tar.gz
@@ -189,12 +189,3 @@ modules:
         path: patches/0009-Install-startuphints.patch
       - type: file
         path: ch.openboard.OpenBoard.appdata.xml
-
-  - name: openboard-importer
-    buildsystem: qmake
-    sources:
-      - type: git
-        url: https://github.com/OpenBoard-Org/OpenBoard-Importer
-        commit: 47927bda021b4f7f1540b794825fb0d601875e79
-    build-commands:
-      - install -Dm755 -t ${FLATPAK_DEST}/bin/ OpenBoardImporter
