Fix compilation with current poppler

--- a/ch.openboard.OpenBoard.yml
+++ b/ch.openboard.OpenBoard.yml
@@ -79,3 +79,5 @@ modules:
         path: patches/0002-feat-disable-software-update-check.patch
       - type: file
         path: ch.openboard.OpenBoard.appdata.xml
+      - type: patch
+        path: patches/fix-poppler.patch
