--- a/ch.openboard.OpenBoard.yml
+++ b/ch.openboard.OpenBoard.yml
@@ -77,5 +77,7 @@ modules:
         path: patches/0001-Linux-Only-use-onboard-by-default-if-it-s-installed.patch
       - type: patch
         path: patches/0002-feat-disable-software-update-check.patch
+      - type: patch
+        path: patches/1434.patch
       - type: file
         path: ch.openboard.OpenBoard.appdata.xml
